content bottom padding, fixes sticky footer cutting off content

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,6 +46,7 @@ li {
 #content {
     border: 3px solid #dddddd;
     background-color: #ffffff;
+    margin-bottom:4em;
 }
 .section-heading {
     margin-top:.4em;
